style: reformat code