@@ -1,5 +1,9 @@
 package kafkastreams.example.KStream;
 
+import java.time.Duration;
+import java.util.List;
+import java.util.Properties;
+
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
@@ -8,10 +12,6 @@ import org.apache.kafka.common.serialization.StringDeserializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.time.Duration;
-import java.util.Arrays;
-import java.util.Properties;
-
 public class Consumer {
 
     private final static Logger log = LoggerFactory.getLogger(Consumer.class);
@@ -19,14 +19,16 @@ public class Consumer {
     private final static String GROUP_ID = "kstream-application";  /* this can be anything you want */
     private final static String TOPIC_NAME = "stream_filter_sink";
 
-    public Consumer() {}
-    public static void main(String[] args) {
+    public Consumer() {
+    }
+
+    public static void main(final String[] args) {
         new Consumer().run();
     }
 
     public void run() {
         log.info("Starting Kafka consumer...");
-        KafkaConsumer<String, String> consumer = createKafkaConsumer();
+        final KafkaConsumer<String, String> consumer = createKafkaConsumer();
 
         // safe close
         Runtime.getRuntime().addShutdownHook(new Thread(() -> {
@@ -35,13 +37,13 @@ public class Consumer {
             consumer.close();
             log.info("done!");
         }));
-        consumer.subscribe(Arrays.asList(TOPIC_NAME));
+        consumer.subscribe(List.of(TOPIC_NAME));
 
         log.info("Consumer is ready");
-        while(true) {
-            ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(100));
+        while (true) {
+            final ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(100));
 
-            for (ConsumerRecord<String, String> record : records) {
+            for (final ConsumerRecord<String, String> record : records) {
                 log.info("Key: " + record.key() + ", Value: " + record.value());
                 log.info("Partition " + record.partition() + ", Offset: " + record.offset());
             }
@@ -49,7 +51,7 @@ public class Consumer {
     }
 
     public KafkaConsumer<String, String> createKafkaConsumer() {
-        Properties properties = new Properties();
+        final Properties properties = new Properties();
         properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, BOOTSTRAP_SERVERS);
         properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
